# quiz-bot

./: .gitignore  LICENSE  README.md  challenge_settings_example.json  docker-compose.yml  makefile  pyproject.toml  setup.cfg  shoutbox_settings_example.json
cli/: __init__.py  cmd.py  db.py
db/: __init__.py  base.py  challenge.py  result.py  user.py  utils.py
docker/: base.dockerfile  code.dockerfile
manager/: __init__.py  app.py  bot.py  challenge.py  chitchat.py  client.py  errors.py  interface.py  models.py  objects.py  settings.py
quiz_bot/: models.py  path.py  settings.py
quiz_bot/admin/: __init__.py  app.py  basic_settings.py  cloud.py  flask.py  statistics.py
quiz_bot/admin/templates/: index.html  lib.html
quiz_bot/cli/: __init__.py  admin.py  bot.py  challenge.py  cmd.py  db.py  group.py  utils.py
quiz_bot/clients/: __init__.py  chitchat.py  remote_client.py  shoutbox.py  telegram.py
quiz_bot/db/: __init__.py  base.py  challenge.py  message.py  participant.py  result.py  user.py  utils.py
quiz_bot/entity/: __init__.py  context_models.py  errors.py  objects.py  settings.py  types.py
quiz_bot/factory/: __init__.py  base.py  base_factory.py  bot_factory.py  chat_factory.py  interface_factory.py  manager_factory.py  notifier_factory.py  quiz_factory.py
quiz_bot/manager/: __init__.py  bot.py  challenge.py  checker.py  chitchat.py  errors.py  interface.py  notifier.py  objects.py  quizbot.py
quiz_bot/manager/checkers/: __init__.py  abstract.py  base.py  classic.py  models.py
quiz_bot/managers/: __init__.py  challenge.py  interface.py  markup.py  notifier.py  quizbot.py
quiz_bot/managers/checkers/: base.py  classic.py
quiz_bot/quiz/: __init__.py  challenge.py  errors.py  interface.py  keeper.py  manager.py  markup.py  notifier.py  objects.py  registrar.py
quiz_bot/quiz/checkers/: __init__.py  abstract.py  abstract_checker.py  base.py  base_checker.py  classic.py  mapping.py  regular_checker.py  story_checker.py  types.py
quiz_bot/quiz/interfaces/: __init__.py  abstract_interface.py  base_interface.py  chat_interface.py  errors.py  quiz_interface.py
quiz_bot/storage/: __init__.py  attempts.py  challenge.py  errors.py  message.py  objects.py  participant.py  result.py  user.py
quiz_bot/utils/: __init__.py  cloud.py  time.py
storage/: __init__.py  challenge.py  models.py  result.py  user.py
utils/: __init__.py
