[tool.poetry]
name = "chitchat-proxy"
version = "0.1.0"
description = "Chitchat proxy"
authors = [
    "V. Mukhamatnurov <v.mukhamatnurov@tinkoff.ru>",
]
repository = "https://stash.tcsbank.ru/users/v.mukhamatnurov/repos/chitchat_proxy"
packages = [
    { include = "./manager" },
]

[[tool.poetry.source]]
name = "internal"
url = "https://registry.tcsbank.ru/repository/pypi-all/simple"

[tool.poetry.scripts]
app = 'cli.cmd:app'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pydantic = ">=1.2"
docker = "*"
pyTelegramBotAPI = "^3.7.2"
tenacity = "^6.2.0"
yarl = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8-awesome = "<1.3"
mypy = "^0.761"

[tool.black]
target-version = ['py38']
line-length = 120
exclude = ".*dm/entity/synthesis/*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
