[tool.poetry]
name = "quiz-bot"
version = "0.1.0"
description = "Quiz Bot"
authors = [
    "livestreamx <livestreamepidemz@yandex.ru>",
]
repository = "https://github.com/livestreamx/quiz-bot"
packages = [
    { include = "./quiz_bot" },
]

[tool.poetry.scripts]
app = 'quiz_bot.cli.group:app'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pydantic = ">=1.2"
docker = "*"
pyTelegramBotAPI = "^3.7.2"
tenacity = "^6.2.0"
yarl = "^1.4.2"
sqlalchemy = "^1.3.18"
pydantic-sqlalchemy = "^0.0.4"
sqlalchemy_utils = "^0.36.8"
psycopg2-binary = "^2.8.5"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8-awesome = "<1.3"
mypy = "^0.761"

[tool.black]
target-version = ['py38']
line-length = 120
exclude = ".*dm/entity/synthesis/*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
